# clamavqtengine

./: .gitignore  CMakeLists.txt  clamavengine.cpp  clamavengine.h  clamavqtengine.pro  dirscanner.cpp  dirscanner.h  filescanner.cpp  filescanner.h  memscanner.cpp  memscanner.h  scanner.h
